# jasper-client

./: .gitignore  requirements.txt  setup.cfg
tests/: test_jasperClient.py
