[metadata]
name = jasperClient
version = 0.0.1
author = Billon Prestations
author_email = alexandre@billonprestations.fr
description = jasper Client for connecting to Jasper Server and using rest API
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
url = https://www.billonprestations.fr

[options]
install_requires =
    setuptools>=21.0.0
    urllib3>=2.2.1
    fastapi>=0.92.0
    requests>=2.31.0
    xmltodict>=0.13.0